# StellarBridge

./: .gitignore  README.md  fix_git.ps1
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
contracts/: Cargo.toml  deploy.ps1  deployed_addresses.txt
contracts/community_contract/: Cargo.toml
contracts/community_contract/src/: lib.rs
contracts/escrow_contract/: Cargo.toml
contracts/escrow_contract/src/: lib.rs
contracts/invoice_contract/: Cargo.toml
contracts/invoice_contract/src/: lib.rs
contracts/payment_contract/: Cargo.toml
contracts/payment_contract/src/: lib.rs
contracts/reputation_contract/: Cargo.toml
contracts/reputation_contract/src/: lib.rs
frontend/: gen-issuer.js  package-lock.json  package.json  test-invoice.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/community/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/escrow/: page.tsx
frontend/src/app/invoice/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/merchant/: page.tsx
frontend/src/app/payment/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/wallet/: page.tsx
frontend/src/components/: Footer.tsx  LiveTicker.tsx  NavBar.tsx
frontend/src/lib/: constants.ts  soroban.ts  wallet-context.tsx
